# hamilton-protocols

./: .gitignore  .pre-commit-config.yaml  README.md  commitlint.config.js  pyproject.toml  wip.ipynb
docs/: todo.md
layouts/: bli.lay
notebooks/: runner.ipynb
protocols/: bli.py
src/hamilton_protocols/: __init__.py  bli.py  registry.py  template.py  utils.py
src/hamilton_protocols/api/: __main__.py  log_analyzer.py  main.py
src/hamilton_protocols/layouts/: bli.lay  cherry-pick.lay  fab-map.lay  max.lay  purification.lay  reconstitute.lay
src/hamilton_protocols/protocols/: bli.py  cherry.py  dna.py  purification.py
